Fresh installation error fixed.

--- a/NetCoreCMS.Web/Views/Shared/_AdminLayout.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_AdminLayout.cshtml
@@ -128,8 +128,9 @@
                         <li>
                             <a href="#"><i class="fa fa-th-large fa-fw"></i> Module<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
-                                <li><a asp-controller="CmsModule" asp-action="Index"><i class="fa fa-pencil-square-o fa-fw"></i> New Module</a></li>
-                                <li><a asp-controller="CmsModule" asp-action="Manage"><i class="fa fa-th-list fa-fw"></i> Manage</a></li>
+                                <li><a asp-controller="CmsModule" asp-action="Install"><i class="fa fa-pencil-square-o fa-fw"></i> Install</a></li>
+                                <li><a asp-controller="CmsModule" asp-action="Create"><i class="fa fa-pencil-square-o fa-fw"></i> Create New</a></li>
+                                <li><a asp-controller="CmsModule" asp-action="Index"><i class="fa fa-th-list fa-fw"></i> Manage</a></li>
                             </ul>
                         </li>
                         <li>
