Showing modules list. And setup is no longer a module. Moved into web project.

--- a/NetCoreCMS.Web/Views/SetupHome/Index.cshtml
+++ b/NetCoreCMS.Web/Views/SetupHome/Index.cshtml
@@ -26,6 +26,7 @@
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
+
     <environment names="Staging,Production">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
                 asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
@@ -42,17 +43,17 @@
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
 
-    <link href="/NetCoreCMS.Modules.Setup/css/Style.css" rel="stylesheet" />
-    <script src="/NetCoreCMS.Modules.Setup/js/Setup.js"></script>
+    <link href="~/css/SetupStyle.css" rel="stylesheet" />
+    <script src="~/js/Setup.js"></script>
     <script src="/lib/jquery-validation/dist/jquery.validate.js"></script>
+    
     <style>
         input {
             max-width: 800px !important;
         }
     </style>
+
 </head>
-
-
 
 <body>
 
