--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsModule/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsModule/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using NetCoreCMS.Framework.Core.Models 
 @using NetCoreCMS.Framework.Utility
 @using System.Collections
-@model List<NccModule>
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
     Layout = Constants.AdminLayoutName;
@@ -29,20 +29,28 @@
                 }
                 <table id="pageListDt" class="table table-striped table-bordered" cellspacing="0" width="100%">
                     <thead>
-                        <tr><th>Name</th><th>Author</th><th>Description</th><th>Module Version</th><th>NetCore Version</th><th>Category</th><th>Action</th></tr>
+                        <tr><th>Name</th><th>Description</th><th>Category</th><th>Dependency</th><th>NetCore Version</th><th>Create By</th><th>Status</th><th>Action</th></tr>
                     </thead>
                     <tbody>
-                        @foreach (var item in Model)
+                        @foreach (var item in ViewBag.Modules)
                         {
                             <tr>
-                                <td>@item.ModuleTitle</td>
-                                <td>@item.Author</td>
+                                <td>
+                                    @item.ModuleTitle
+                                    <p>
+                                        Version: @item.Version<br/>
+                                        Author: @item.Author<br/>
+                                        Website:@item.WebSite
+                                    </p>
+                                </td>
                                 <td>@item.Description</td>
                                 <td>@item.Category</td>
-                                <td>@item.Version</td>
-                                <td>@item.NetCoreVersion</td>
+                                <td>@item.Dependencies</td>
+                                <td>@item.NetCoreCMSVersion</td>
+                                <td>@item.CreateBy</td>                                
+                                <td>@item.ModuleStatus</td>
                                 <td> 
-                                    <a asp-controller="CmsTheme" asp-action="Activate" asp-route-themeName=" ">Activate</a>
+                                    @Html.Raw(NetCoreCMS.Modules.Cms.Lib.ModuleHelper.GetActionText(item))
                                 </td>
                             </tr>
                         }
