Added simple policy based authorization system.

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/Admin/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/Admin/Index.cshtml
@@ -82,8 +82,9 @@
                     <option value="Administrator">Administrator</option>
                     <option value="Author">Author</option>
                     <option value="Editor">Editor</option>
-                    <option value="Reader">Reader</option>
-                    <option value="Subscriber">Subscriber</option>                    
+                    <option value="Contributor">Contributor</option>  
+                    <option value="Reader">Subscriber</option>  
+                    
                 </select>
                 <span asp-validation-for="NewUserRole" class="text-danger"></span>
             </div>
