--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsMenu/Partial/_MenuSelectionPanel.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsMenu/Partial/_MenuSelectionPanel.cshtml
@@ -77,15 +77,15 @@
 
             @* Post *@
             <div class="panel panel-default">
-                <div class="panel-heading">
+                @*<div class="panel-heading">
                     <h4 class="panel-title">
                         <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" class="collapsed" aria-expanded="false">
                             Post
                             <i class="fa fa-angle-down" style="float:right;"></i>
                         </a>
                     </h4>
-                </div>
-                <div id="collapseTwo" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
+                </div>*@
+                @*<div id="collapseTwo" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
                     <div class="panel-body">
                         <div class="panel-body">
                             <ul class="nav nav-tabs">
@@ -158,20 +158,20 @@
                             <div style="clear:both;"></div>
                         </div>
                     </div>
-                </div>
+                </div>*@
             </div>
 
             @* Category *@
             <div class="panel panel-default">
-                <div class="panel-heading">
+                @*<div class="panel-heading">
                     <h4 class="panel-title">
                         <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" class="collapsed" aria-expanded="false">
                             Category
                             <i class="fa fa-angle-down" style="float:right;"></i>
                         </a>
                     </h4>
-                </div>
-                <div id="collapseThree" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
+                </div>*@
+                @*<div id="collapseThree" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
                     <div class="panel-body">
                         <div class="panel-body">
                             <ul class="nav nav-tabs">
@@ -244,20 +244,20 @@
                             <div style="clear:both;"></div>
                         </div>
                     </div>
-                </div>
+                </div>*@
             </div>
 
             @* Module *@
             <div class="panel panel-default">
-                <div class="panel-heading">
+                @*<div class="panel-heading">
                     <h4 class="panel-title">
                         <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour" class="collapsed" aria-expanded="false">
                             Module
                             <i class="fa fa-angle-down" style="float:right;"></i>
                         </a>
                     </h4>
-                </div>
-                <div id="collapseFour" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
+                </div>*@
+                @*<div id="collapseFour" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
                     <div class="panel-body">
                         <div class="panel-body">
                             <ul class="nav nav-tabs">
@@ -330,20 +330,20 @@
                             <div style="clear:both;"></div>
                         </div>
                     </div>
-                </div>
+                </div>*@
             </div>
 
             @* Tag *@
             <div class="panel panel-default">
-                <div class="panel-heading">
+                @*<div class="panel-heading">
                     <h4 class="panel-title">
                         <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive" class="collapsed" aria-expanded="false">
                             Tag
                             <i class="fa fa-angle-down" style="float:right;"></i>
                         </a>
                     </h4>
-                </div>
-                <div id="collapseFive" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
+                </div>*@
+                @*<div id="collapseFive" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
                     <div class="panel-body">
                         <div class="panel-body">
                             <ul class="nav nav-tabs">
@@ -416,7 +416,7 @@
                             <div style="clear:both;"></div>
                         </div>
                     </div>
-                </div>
+                </div>*@
             </div>
 
             @* Url *@
@@ -432,10 +432,12 @@
                 <div id="collapseSix" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
                     <div class="panel-body">
                         <div class="panel-body">
+                            <label>Name:</label>
+                            <input class="form-control input-sm" type="text" id="urlMenuName" />
                             <label>URL:</label>
-                            <input class="form-control input-sm" type="text" id="url" />
+                            <input class="form-control input-sm" type="text" id="urlMenuUrl" />
                             <label>Target: </label>
-                            <select class="form-control input-sm">
+                            <select class="form-control input-sm" id="urlMenuTarget">
                                 <option value="_blank">Blank Window</option>
                                 <option value="parent">Parent</option>
                                 <option value="_self">Self</option>
