--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsMenu/Partial/_MenuSelectionPanel.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsMenu/Partial/_MenuSelectionPanel.cshtml
@@ -75,17 +75,17 @@
                 </div>
             </div>
 
-            @* Post *@
+            <!--Post Start --
             <div class="panel panel-default">
-                @*<div class="panel-heading">
+                <div class="panel-heading">
                     <h4 class="panel-title">
                         <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" class="collapsed" aria-expanded="false">
                             Post
                             <i class="fa fa-angle-down" style="float:right;"></i>
                         </a>
                     </h4>
-                </div>*@
-                @*<div id="collapseTwo" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
+                </div>
+                <div id="collapseTwo" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
                     <div class="panel-body">
                         <div class="panel-body">
                             <ul class="nav nav-tabs">
@@ -158,20 +158,21 @@
                             <div style="clear:both;"></div>
                         </div>
                     </div>
-                </div>*@
+                </div>
             </div>
+            <!--Post End -->
 
-            @* Category *@
+            <!-- Category Start --
             <div class="panel panel-default">
-                @*<div class="panel-heading">
+                <div class="panel-heading">
                     <h4 class="panel-title">
                         <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" class="collapsed" aria-expanded="false">
                             Category
                             <i class="fa fa-angle-down" style="float:right;"></i>
                         </a>
                     </h4>
-                </div>*@
-                @*<div id="collapseThree" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
+                </div>
+                <div id="collapseThree" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
                     <div class="panel-body">
                         <div class="panel-body">
                             <ul class="nav nav-tabs">
@@ -244,20 +245,21 @@
                             <div style="clear:both;"></div>
                         </div>
                     </div>
-                </div>*@
+                </div>
             </div>
+            <!-- Category End-->
 
-            @* Module *@
+            <!-- Module Start --
             <div class="panel panel-default">
-                @*<div class="panel-heading">
+                <div class="panel-heading">
                     <h4 class="panel-title">
                         <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour" class="collapsed" aria-expanded="false">
                             Module
                             <i class="fa fa-angle-down" style="float:right;"></i>
                         </a>
                     </h4>
-                </div>*@
-                @*<div id="collapseFour" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
+                </div>
+                <div id="collapseFour" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
                     <div class="panel-body">
                         <div class="panel-body">
                             <ul class="nav nav-tabs">
@@ -330,20 +332,21 @@
                             <div style="clear:both;"></div>
                         </div>
                     </div>
-                </div>*@
+                </div>
             </div>
+            <!-- Module End -->
 
-            @* Tag *@
+            <!-- Tag Start --
             <div class="panel panel-default">
-                @*<div class="panel-heading">
+                <div class="panel-heading">
                     <h4 class="panel-title">
                         <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive" class="collapsed" aria-expanded="false">
                             Tag
                             <i class="fa fa-angle-down" style="float:right;"></i>
                         </a>
                     </h4>
-                </div>*@
-                @*<div id="collapseFive" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
+                </div>
+                <div id="collapseFive" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
                     <div class="panel-body">
                         <div class="panel-body">
                             <ul class="nav nav-tabs">
@@ -416,10 +419,11 @@
                             <div style="clear:both;"></div>
                         </div>
                     </div>
-                </div>*@
+                </div>
             </div>
+            <!-- Tag End -->            
 
-            @* Url *@
+            <!-- Url Start -->
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4 class="panel-title">
@@ -454,6 +458,7 @@
                     </div>
                 </div>
             </div>
+            <!-- Url End -->
         </div>
     </div> 
 </div>
