--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsMenu/Partial/_MenuSelectionTree.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsMenu/Partial/_MenuSelectionTree.cshtml
@@ -1,20 +1,57 @@
-﻿
+﻿@{
+    var currentMenu = ViewBag.CurrentMenu;
+}
 <div class="col-sm-8">
     <div class="panel panel-default">
         <div class="panel-heading">
             <div class="col-sm-12">
                 <div class="col-sm-6" style="padding-right:0px;">
-                    <input type="hidden" id="menuId" name="menuId" value="0"/>
-                    <input type="text" id="menuName" class="form-control input-sm" placeholder="Enter Menu Name" />
-                </div>                 
+                    <input type="hidden" id="menuId" name="menuId" value="@currentMenu.Id" />
+                    <input type="text" id="menuName" class="form-control input-sm" placeholder="Enter Menu Name" value="@currentMenu.Name" />
+                </div>
                 <div class="col-sm-4">
                     <select id="menuLocation" class="form-control input-sm">
                         <option value="">Menu Location</option>
-                        <option value="Top">Top</option>
-                        <option value="Navigation">Navigation</option>
-                        <option value="Left">Left</option>
-                        <option value="Right">Right</option>
-                        <option value="Footer">Footer</option>
+                        @if (currentMenu.Position.ToString() == "Top")
+                        {
+                            <option value="Top" selected>Top</option>
+                        }
+                        else
+                        {
+                            <option value="Top">Top</option>
+                        }
+                        @if (currentMenu.Position.ToString() == "Navigation")
+                        {
+                            <option value="Navigation" selected>Navigation</option>
+                        }
+                        else
+                        {
+                            <option value="Navigation">Navigation</option>
+                        }
+                        @if (currentMenu.Position.ToString() == "Left")
+                        {
+                            <option value="Left" selected>Left</option>
+                        }
+                        else
+                        {
+                            <option value="Left">Left</option>
+                        }
+                        @if (currentMenu.Position.ToString() == "Right")
+                        {
+                            <option value="Right" selected>Right</option>
+                        }
+                        else
+                        {
+                            <option value="Right">Right</option>
+                        }
+                        @if (currentMenu.Position.ToString() == "Footer")
+                        {
+                            <option value="Footer" selected>Footer</option>
+                        }
+                        else
+                        {
+                            <option value="Footer">Footer</option>
+                        }
                     </select>
                 </div>
                 <div class="col-sm-2">
@@ -27,18 +64,38 @@
 
         <div class="panel-body">
             <ul id="selectedMenuTree">
-                <li class="list-group-item no-boarder" ncc-menu-item-id="0" ncc-menu-item-action-type="Url" ncc-menu-item-controller="CmsHome" ncc-menu-item-action="Index" ncc-menu-item-action-data="" ncc-menu-item-url="/CmsHome" ncc-menu-item-target="" ncc-menu-item-order="1" ncc-menu-item-title="Home">
-                    <div class="menu-item-content">
-                        <div class="pull-left" style="padding: 5px 5px;">
-                            <i class="glyphicon glyphicon-move margin-right-10"></i>
-                            <span class="ncc-menu-title">Home</span>
+                @if (currentMenu.Id > 0)
+                {
+                    @currentMenu.MenuItems.Count
+                    @foreach (var menuItem in currentMenu.MenuItems)
+                    {
+                        @menuItem.Name
+                        <li class="list-group-item no-boarder" ncc-menu-item-id="0" ncc-menu-item-action-type="Url" ncc-menu-item-controller="CmsHome" ncc-menu-item-action="Index" ncc-menu-item-action-data="" ncc-menu-item-url="/CmsHome" ncc-menu-item-target="" ncc-menu-item-order="1" ncc-menu-item-title="Home">
+                            <div class="menu-item-content">
+                                <div class="pull-left" style="padding: 5px 5px;">
+                                    <i class="glyphicon glyphicon-move margin-right-10"></i>
+                                    <span class="ncc-menu-title">Home</span>
+                                </div>
+                                <input type="button" class="closeMenuItem pull-right" value="X" onclick="RemoveMenuItem(this)" />
+                            </div>
+                        </li>
+                    }
+                }
+                else
+                {
+                    <li class="list-group-item no-boarder" ncc-menu-item-id="0" ncc-menu-item-action-type="Url" ncc-menu-item-controller="CmsHome" ncc-menu-item-action="Index" ncc-menu-item-action-data="" ncc-menu-item-url="/CmsHome" ncc-menu-item-target="" ncc-menu-item-order="1" ncc-menu-item-title="Home">
+                        <div class="menu-item-content">
+                            <div class="pull-left" style="padding: 5px 5px;">
+                                <i class="glyphicon glyphicon-move margin-right-10"></i>
+                                <span class="ncc-menu-title">Home</span>
+                            </div>
+                            <input type="button" class="closeMenuItem pull-right" value="X" onclick="RemoveMenuItem(this)" />
                         </div>
-                        <input type="button" class="closeMenuItem pull-right" value="X" onclick="RemoveMenuItem(this)" />
-                    </div>
-                </li>                
+                    </li>
+                }
             </ul>
             <span id="result"></span>
         </div>
-         
+
     </div>
 </div>
