--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsMenu/Partial/_MenuSelectionTree.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsMenu/Partial/_MenuSelectionTree.cshtml
@@ -12,7 +12,7 @@
                 <div class="col-sm-4">
                     <select id="menuLocation" class="form-control input-sm">
                         <option value="">Menu Location</option>
-                        @if (currentMenu.Position.ToString() == "Top")
+                        @if (currentMenu.Id > 0 && currentMenu.Position.ToString() == "Top")
                         {
                             <option value="Top" selected>Top</option>
                         }
