--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsMenu/Partial/_MenuSelectionTree.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsMenu/Partial/_MenuSelectionTree.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     var currentMenu = ViewBag.CurrentMenu;
 }
+
 <div class="col-sm-8">
     <div class="panel panel-default">
         <div class="panel-heading">
@@ -66,20 +67,7 @@
             <ul id="selectedMenuTree">
                 @if (currentMenu.Id > 0)
                 {
-                    @currentMenu.MenuItems.Count
-                    @foreach (var menuItem in currentMenu.MenuItems)
-                    {
-                        @menuItem.Name
-                        <li class="list-group-item no-boarder" ncc-menu-item-id="0" ncc-menu-item-action-type="Url" ncc-menu-item-controller="CmsHome" ncc-menu-item-action="Index" ncc-menu-item-action-data="" ncc-menu-item-url="/CmsHome" ncc-menu-item-target="" ncc-menu-item-order="1" ncc-menu-item-title="Home">
-                            <div class="menu-item-content">
-                                <div class="pull-left" style="padding: 5px 5px;">
-                                    <i class="glyphicon glyphicon-move margin-right-10"></i>
-                                    <span class="ncc-menu-title">Home</span>
-                                </div>
-                                <input type="button" class="closeMenuItem pull-right" value="X" onclick="RemoveMenuItem(this)" />
-                            </div>
-                        </li>
-                    }
+                    @ViewBag.CurrentMenuItems
                 }
                 else
                 {
