--- a/NetCoreCMS.Web/Views/Shared/_AdminLayout.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_AdminLayout.cshtml
@@ -143,7 +143,7 @@
                         <li>
                             <a href="#"><i class="fa fa-gears fa-fw"></i> Settings<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
-                                <li><a asp-controller="Settings" asp-action="Index"><i class="fa fa-gear fa-fw"></i> General</a></li>
+                                <li><a asp-controller="Admin" asp-action="Settings"><i class="fa fa-gear fa-fw"></i> General</a></li>
                                 <li><a href="#"><i class="fa fa-user fa-fw"></i> Profile</a></li>
                             </ul>
                         </li>
