--- a/NetCoreCMS.Web/Views/Shared/_AdminLayout.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_AdminLayout.cshtml
@@ -106,7 +106,7 @@
                         <li>
                             <a href="#"><i class="fa fa-file-text-o fa-fw"></i> Page<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
-                                <li><a asp-controller="CmsPage" asp-action="Create"><i class="fa fa-pencil-square-o fa-fw"></i> New Page </a></li>
+                                <li><a asp-controller="CmsPage" asp-action="CreateEdit"><i class="fa fa-pencil-square-o fa-fw"></i> New Page </a></li>
                                 <li><a asp-controller="CmsPage" asp-action="Manage"><i class="fa fa-th-list fa-fw"></i> Manage </a></li>
                             </ul>
                         </li>
