--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Manage.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Manage.cshtml
@@ -17,7 +17,7 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 @ViewData["PageSubtitle"]
-                <div class="pull-right"><a asp-controller="CmsPage" asp-action="Create" class="btn btn-outline btn-primary btn-xs">Add New</a></div> 
+                <div class="pull-right"><a asp-controller="CmsPage" asp-action="CreateEdit" class="btn btn-outline btn-primary btn-xs">Add New</a></div> 
             </div>
             <div class="panel-body">
                 <table id="pageListDt" class="table table-striped table-bordered" cellspacing="0" width="100%">
@@ -34,7 +34,7 @@
                                 <td>@page.PageStatus</td>
                                 <td>@page.PageOrder</td>
                                 <td>
-                                    <a asp-controller="CmsPage" asp-action="Edit" asp-route-id="@page.Id">Edit</a> |
+                                    <a asp-controller="CmsPage" asp-action="CreateEdit" asp-route-id="@page.Id">Edit</a> |
                                     <a asp-controller="CmsPage" asp-action="Delete" asp-route-id="@page.Id">Delete</a>
                                 </td>
                             </tr>
